# MPABY

./: .gitignore  CMakeLists.txt  README.md  kill.sh  run16  run2  run5  run50  run8
MPABY_CORE/: CORE_protocol.h
MPABY_GMW/: GMW_protocol.h  GMW_share.h
MPABY_util/: util_cmpc_config.h  util_helper.h  util_netmp.h
emp-agmpc/: MPGC.h  abitmp.h  fpremp.h
test/: adder64-fushion.txt  adder64-fushion2.txt  adder64.txt
test/test_CORE/: CMakeLists.txt  test_A2B_sh.cpp  test_Bit2A_sh.cpp  test_MMTR_sh.cpp  test_communication.cpp
test/test_GC/: CMakeLists.txt  test_MPGC_sh.cpp
test/test_GMW/: CMakeLists.txt  test_GMW_sh.cpp  test_vec_sh.cpp
